footer overlaps web content fixed

--- a/3691 website interface/css/styles.css
+++ b/3691 website interface/css/styles.css
@@ -115,6 +115,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
 
 }
 
@@ -184,6 +185,7 @@ footer {
 
 .contentTable {
     margin-left: 210px;
+    margin-bottom: 100px;
 }
 
 .sidebar {
